# asker

./: Cargo.toml  GUIDE.md  README.md
examples/: README.md  simplest.rs
examples/01-simplest/: Cargo.toml
examples/01-simplest/src/: main.rs
examples/02-ids/src/: main.rs
examples/booleans/src/: main.rs
src/: getin.rs  lib.rs  lib.rs.bk  test.rs
src/ask/askbool/: mod.rs
src/ask/askstring/: getin.rs  mod.rs
src/ask/getin/: mod.rs
src/tests/: mod.rs
