[package]
name = "asker"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/Octalbyte/asker"
license = "MIT"
description = "Smoothly get and check user input"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
colored = "2.0.0"
crossterm = "0.22.1"
safe_print = "1.0.0"